--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,11 @@
     "require": {
         "pda/pheanstalk": "~2.1.0"
     },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
+    },
     "autoload": {
         "psr-4": { "ShopwarePlugins\\SwagJobQueue\\": "" }
     }
